// Identity Module - logical schema (lược đồ logic) aligned with current repo truth (hiện trạng repo)
// Note:
// - Payload auth internal token/session storage là framework-managed (do framework quản lý), không mô hình hóa chi tiết ở đây.
// - `public_id` chỉ là public-facing identifier (mã công khai) khi cần expose user reference an toàn hơn id nội bộ.
// - `google_sub` là provider linkage field (trường liên kết nhà cung cấp) cho Google login trong cùng auth authority,
//   không phải auth system (hệ thống xác thực) thứ hai.

Project identity_module {
  database_type: "PostgreSQL"
  Note: '''
  Identity module cho PMTL_VN.
  Cách đọc nhanh:
  - users là bảng quan trọng nhất.
  - Payload auth là authority duy nhất.
  - File này là schema logic để học kiến trúc, không phải dump DB thật của Payload.
  '''
}

Enum user_role {
  super_admin [note: "Super admin / Toàn quyền"]
  admin [note: "Admin / Phụng sự viên"]
  member [note: "Member / Thành viên"]
}

Table media_assets {
  id uuid [pk]
  public_id varchar [unique]
  storage_provider varchar [not null, note: "local | s3-compatible"]
  object_key varchar [unique, not null]
  original_filename varchar
  content_type varchar
  size_bytes bigint
  checksum_sha256 varchar
  owner_id uuid [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table users {
  id uuid [pk]
  public_id varchar [unique]
  email varchar [not null, unique]
  full_name varchar [not null]
  username varchar [unique]
  phone varchar
  dharma_name varchar
  google_sub varchar [note: "Google provider subject (mã định danh phía Google) / mã liên kết Google"]
  avatar_media_id uuid [ref: > media_assets.id]
  bio text
  role user_role [not null]
  is_blocked bool [default: false]
  last_login_at timestamp
  created_at timestamp
  updated_at timestamp
}

TableGroup "Identity Core" [note: "Nhóm lõi cho đăng nhập, role, và hồ sơ cơ bản"] {
  users
}

TableGroup "Shared Reference" [note: "Bảng tham chiếu từ module khác"] {
  media_assets
}
